src/test/deca/syntax/valid/synt/class_decl_asm_method.deca
/*
    Description: Declaration d'une methode asm dans une classe

    Résultat : OK
*/
class A{
    asm("aaa");
}
